# sudoku-solver-api

./: .gitignore  GRADE.md  README.md  api.py  benchmark.py  main.py  pyproject.toml  requirements.txt
puzzles/: sudokuN10num0.txt  sudokuN10num1.txt  sudokuN10num2.txt  sudokuN11num0.txt  sudokuN11num1.txt  sudokuN11num2.txt  sudokuN12num0.txt  sudokuN12num1.txt  sudokuN12num2.txt  sudokuN13num0.txt  sudokuN13num1.txt  sudokuN13num2.txt  sudokuN14num0.txt  sudokuN14num1.txt  sudokuN14num2.txt  sudokuN15num0.txt  sudokuN15num1.txt  sudokuN15num2.txt  sudokuN16num0.txt  sudokuN16num1.txt  sudokuN16num2.txt  sudokuN2num0.txt  sudokuN2num1.txt  sudokuN2num2.txt  sudokuN3num0.txt  sudokuN3num1.txt  sudokuN3num2.txt  sudokuN4num0.txt  sudokuN4num1.txt  sudokuN4num2.txt  sudokuN5num0.txt  sudokuN5num1.txt  sudokuN5num2.txt  sudokuN6num0.txt  sudokuN6num1.txt  sudokuN6num2.txt  sudokuN7num0.txt  sudokuN7num1.txt  sudokuN7num2.txt  sudokuN8num0.txt  (+8 more)
src/model/: grid.py  requests.py  responses.py
src/solvers/: dancing_links_solver.py  first_fail_solver.py  naive_solver.py  sat_solver.py  solver.py  solver_type.py
src/utils/: all_different.py  group_by.py  recursion_limit.py
