[project]
name = "sudolver"
version = "0.1.0"
description = "A sudoku solver."

requires-python = ">=3.13"
dependencies = [
    "bitarray>=3.4.1",
    "numpy>=2.2.5",
    "pydantic>=2.11.5",
    "python-magic>=0.4.27",
    "python-sat>=1.8.dev17",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.9",
]
